--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -3,9 +3,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Info of International Students</title>
+    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+
+      // Load the Visualization API and the corechart package.
+      google.charts.load('current', { 'packages': ['corechart'] });
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.charts.setOnLoadCallback(drawChart);
+
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Topping');
+        data.addColumn('number', 'Slices');
+        data.addRows([
+          ['China', 823],
+          ['Mongolia', 222],
+          ['Vietnam', 81],
+          ['Uzbekistan', 72],
+          ['Cambodia', 13],
+          ['Pakistan', 10]
+        ]);
+
+        // Set chart options
+        var options = {
+          'title': 'Status of International Students',
+          'width': 800,
+          'height': 500
+        };
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
 </head>
 <body>
-
+  <!--Div that will hold the pie chart-->
+  <div id="chart_div"></div>
 </body>
 </html>
