[ADD] (#4) - Save codes when it's possible to put sth under carousel

--- a/main/main.html
+++ b/main/main.html
@@ -11,23 +11,24 @@
 <body>
 <!--Navigation-->
 <div id="header">
-<!--    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">-->
-    <nav class="navbar navbar-expand-md navbar-light sticky-top">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top ml-auto" style="margin-left: 30px; margin-top: 15px">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/cbnu_logo_eng.png" height="61" width="215"></a>
+            <a class="navbar-brand" href="#"><img src="img/cbnu_logo_eng.png" height="86" width="301"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive" style="margin-right: 200px">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a href="#">
+                            <button class="linkButton" style="padding-left: 50px">Home</button>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Information</a>
+                        <button class="linkButton" style="padding-left: 50px">Information</button>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Restaurant</a>
+                        <button class="linkButton" style="padding-left: 50px">Restaurant</button>
                     </li>
                 </ul>
             </div>
@@ -43,7 +44,7 @@
             <button type="button" data-bs-target="#slides" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active flex-grow-1" data-bs-interval="3000">
+            <div class="carousel-item active" data-bs-interval="3000">
                 <img src="img/carousel_bg_1.png">
                 <div class="carousel-caption">
                     <h1 class="display-2">Welcome To<br>CHUNGBUK National University</h1>
@@ -56,7 +57,14 @@
                 <img src="img/carousel_bg_3.png">
             </div>
         </div>
+
+        <!--왜인지 모르겠지만 여기에 추가해야 아래로 들어감-->
+        <p>
+            hello world
+        </p>
     </div>
+
+
 </div>
 
 
