[ADD] (#4) - Change menu button design

--- a/main/main.html
+++ b/main/main.html
@@ -21,14 +21,14 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="#">
-                            <button class="linkButton" style="padding-left: 50px">Home</button>
+                            <button class="linkButton">Home</button>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <button class="linkButton" style="padding-left: 50px">Information</button>
+                        <button class="linkButton">Information</button>
                     </li>
                     <li class="nav-item">
-                        <button class="linkButton" style="padding-left: 50px">Restaurant</button>
+                        <button class="linkButton">Restaurant</button>
                     </li>
                 </ul>
             </div>
@@ -59,11 +59,13 @@
         </div>
 
         <!--왜인지 모르겠지만 여기에 추가해야 아래로 들어감-->
-        <p>
-            hello world
-        </p>
+<!--        <p style="background-color: red">-->
+<!--            hello world-->
+<!--        </p>-->
     </div>
-
+<!--    <p style="background-color: green">-->
+<!--        hello world-->
+<!--    </p>-->
 
 </div>
 
