[ADD] (#2) - Adding Background in abroad.html

--- a/main/main.html
+++ b/main/main.html
@@ -13,14 +13,14 @@
 <div id="header">
     <nav class="navbar navbar-expand-md navbar-light sticky-top" style="margin-left: 30px;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/cbnu_logo_eng.png" height="86" width="301"></a>
+            <a class="navbar-brand" href="#"><img src="img/cbnu_logo_eng.png" alt="cbnu_logo_eng" class="img-fluid" height="86" width="301"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a href="#">
+                        <a href="../main/main.html">
                             <button class="linkButton">Home</button>
                         </a>
                     </li>
@@ -54,10 +54,10 @@
                     <h1 class="display-2">Welcome To<br>CHUNGBUK National University</h1>
                 </div>
             </div>
-            <div class="carousel-item" data-bs-interval="5000">
+            <div class="carousel-item" data-bs-interval="3000">
                 <img src="img/carousel_bg_2.png">
             </div>
-            <div class="carousel-item" data-bs-interval="5000">
+            <div class="carousel-item" data-bs-interval="3000">
                 <img src="img/carousel_bg_3.png">
             </div>
         </div>
