--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -173,11 +173,50 @@
       chart1.draw(data1, options1);
     }
   </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script type="text/javascript">
+  var didScroll;
+  var lastScrollTop = 0;
+  var delta = 5;
+  var navbarHeight = $('header').outerHeight();
+  $(window).scroll(function (event) {
+      didScroll = true;
+    });
 
+  setInterval(function () {
+    if (didScroll) {
+      hasScrolled();
+      didScroll = false;
+    }
+  }, 250);
+
+  function hasScrolled() {
+    var st = $(this).scrollTop();
+
+    // Make sure they scroll more than delta
+    if (Math.abs(lastScrollTop - st) <= delta)
+      return;
+
+    // If they scrolled down and are past the navbar, add class .nav-up.
+    // This is necessary so you never see what is "behind" the navbar.
+    if (st > lastScrollTop && st > navbarHeight) {
+      // Scroll Down
+      $('header').removeClass('nav-down').addClass('nav-up');
+    } else {
+      // Scroll Up
+      if (st + $(window).height() < $(document).height()) {
+        $('header').removeClass('nav-up').addClass('nav-down');
+      }
+    }
+
+    lastScrollTop = st;
+  }
+  </script>
 </head>
 
 <body>
   <!--Navigation-->
+  <header>
   <div id="header">
     <!-- <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: bisque; width: 100%; height: 90px;"> -->
     <nav class="navbar navbar-expand-md navbar-light sticky-top" style="margin-left: 30px;">
@@ -208,11 +247,15 @@
       </div>
     </nav>
   </div>
+  </header>
+  <main>
   <div class="container-fluid" style="padding: 0px;">
     <img src="../abroad/img/students.jpg" alt="students.jpg" class="img-fluid" style="display:inline; height: 100vh; width: 100%;">
   </div>
   <div id="pie_2020"></div>
   <div id="geo_2020" style="width: 50%; height: 30%;"></div>
+  </main>
+  <footer></footer>
 </body>
 
 </html>
