--- a/restaurant/restaurant.html
+++ b/restaurant/restaurant.html
@@ -2,6 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Exercise3</title>
   </head>
   <body>
@@ -40,7 +45,6 @@
         t4.addEventListener('click', function(event){
           map.setCenter(new google.maps.LatLng(36.62667852694975, 127.45175753126644));
           });
-
          }
 
     </script>
