[ADD] (#6) - Add Information part of CBNU

--- a/main/main.html
+++ b/main/main.html
@@ -62,11 +62,88 @@
             </div>
         </div>
     </div>
-    <div id="informationDiv">
-        <p>Div for Short Information</p>
+    <!--대학교 정보 들어가는 부분-->
+    <div id="informationDiv" class="container-fluid bg-grey" style="background-color: #FFFFF3">
+        <div class="row" id="infoDiv1">
+            <div id="infoDiv1Text" class="col-sm-6" style="text-align: right;">
+                <p style="font-size: 2vw; line-height: 1.5"><b>Chungbuk National University,</b></p>
+                <p>Which university studies the best</p>
+                <p>Which university tries the best</p>
+                <p>Which university perform the best</p>
+            </div>
+            <div class="col-sm-6">
+                <!--                <img src="img/lib1.jpg" width="650" style="margin-top: 15px; margin-bottom: 15px;"/>-->
+                <!--                <video width="650" style="margin-top: 15px; margin-bottom: 15px;" controls muted autoplay>-->
+                <video width="600vw" style="margin-top: 15px; margin-bottom: 15px;" controls muted autoplay>
+                    <source src="vid/cbnu_promotion_vid.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+        <div class="row" id="infoDiv2">
+            <div class="col-sm-6" style="text-align: right">
+                <img src="img/infoimg2.jpg" width="600vw" style="margin-top: 15px; margin-bottom: 15px;"/>
+            </div>
+            <div id="infoDiv2Text" class="col-sm-6" style="text-align: left;">
+                <p style="font-size: 2vw; line-height: 1.5"><b>Get closer to your dream</b></p>
+                <p>CBNU will do the best for you</p>
+                <p>Everything you need is right here</p>
+            </div>
+        </div>
+        <div class="row" id="infoDiv3">
+            <div id="infoDiv3Text" class="col-sm-6"
+                 style="text-align: left; padding-left: 5vw; padding-right: 5vw; width: auto;margin-right: 0px;margin-left: auto">
+                <p style="font-size: 2vw; line-height: 1.5; text-align: center"><b>Key Facts</b></p>
+                <table id="infoTable">
+                    <tr>
+                        <td colspan="2" bgcolor="#FFCACA"><b>History</b></td>
+                    </tr>
+                    <tr>
+                        <td>Incorporated</td>
+                        <td> 1951</td>
+                    </tr>
+                    <tr>
+                        <td>Motto</td>
+                        <td> Nova Aperio</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" bgcolor="#FFCACA"><b>Campus</b></td>
+                    </tr>
+                    <tr>
+                        <td>Location</td>
+                        <td> Cheongju, Chungbuk</td>
+                    </tr>
+                    <tr>
+                        <td>Size</td>
+                        <td> 956,000m<sup>2</sup></td>
+                    </tr>
+                    <tr>
+                        <td>Student residences</td>
+                        <td> 11 buildings</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" bgcolor="#FFCACA"><b>Admissions(Class of 2020)</b></td>
+                    </tr>
+                    <tr>
+                        <td>Applicants</td>
+                        <td> 18,490</td>
+                    </tr>
+
+                </table>
+            </div>
+            <div class="col-sm-6">
+                <img src="img/lib1.jpg" width="600vw" style="margin-top: 15px; margin-bottom: 15px;"/>
+            </div>
+        </div>
     </div>
+
+    <!--긴급 연락처 들어가는 부분-->
     <div id="emergencyDiv">
+
         <p>Div for Emergency Things</p>
+    </div>
+    <!--찾아오는 길 추가-->
+    <div id="wayToCBNUDiv">
+        <p>Div for way to CBNU</p>
     </div>
 </div>
 <div id="footer">
