--- a/main/main.html
+++ b/main/main.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+
 </head>
 <body>
 <!--Navigation-->
@@ -143,7 +144,14 @@
     </div>
     <!--찾아오는 길 추가-->
     <div id="wayToCBNUDiv">
-        <p>Div for way to CBNU</p>
+        <div class="row">
+            <div class="col-sm-6">
+                <div id="wayMapDiv" style="width: 70vh; height: 50vh;margin-left: auto;margin-right: 0px;"></div>
+            </div>
+            <div class="col-sm-6">
+                <p> hello world</p>
+            </div>
+        </div>
     </div>
 </div>
 <div id="footer">
@@ -151,6 +159,22 @@
         <p>Div for Developer and Other links</p>
     </div>
 </div>
+
+<!--Google 지도 API 사용 스크립트-->
+<script type="text/javascript" src="config.js"></script>
+<!--TODO 이 부분 키 추가해야 함!-->
+<script
+        src="https://maps.googleapis.com/maps/api/js?key=여기에 내 키 추가&callback=initMap&region=kr"
+        async defer></script>
+<script>
+    function initMap() {
+        var mapCanvas = document.getElementById("wayMapDiv");
+        var centerLoc = new google.maps.LatLng(36.62904387998785, 127.45628645377191)
+        var mapOptions = {center: centerLoc, zoom: 15}
+        new google.maps.Map(mapCanvas, mapOptions)
+    }
+</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
