--- a/main/main.html
+++ b/main/main.html
@@ -11,7 +11,7 @@
 <body>
 <!--Navigation-->
 <header id="header">
-    <nav class="navbar navbar-expand-md navbar-light sticky-top" style="margin-left: 30px;">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="margin-left: 30px;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="img/cbnu_logo_eng.png" alt="cbnu_log_eng" class="img-fluid"
             height="86" width="301"></a>
