--- a/abroad/abroad.html
+++ b/abroad/abroad.html
@@ -182,7 +182,7 @@
   <header id="header">
     <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="margin-left: 30px">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../main/main.html">
           <span class="blind">충북대학교 배너이미지</span>
           <img src="img/cbnu_logo_eng.png" alt="" class="" height="86" width="301" />
         </a>
