--- a/main/main.html
+++ b/main/main.html
@@ -112,14 +112,14 @@
                 </tr>
                 <tr>
                     <td>Location</td>
-                    <td> Cheongju, Chungbuk</td>
+                    <td> Cheongju, Chungbuk    </td>
                 </tr>
                 <tr>
                     <td>Size</td>
                     <td> 956,000m<sup>2</sup></td>
                 </tr>
                 <tr>
-                    <td>Student residences</td>
+                    <td>Student residences  </td>
                     <td> 11 buildings</td>
                 </tr>
                 <tr>
@@ -160,7 +160,7 @@
     <script type="text/javascript" src="config.js"></script>
     <!--TODO 이 부분 키 추가해야 함!-->
     <script
-            src="https://maps.googleapis.com/maps/api/js?key=여기에 내 키 추가&callback=initMap&region=kr"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcvWlh4WgVHdfJOQbg0WvHSYqgfs-LVG8&callback=initMap&region=kr"
             async defer></script>
     <script>
         function initMap() {
