--- a/restaurant/restaurant.html
+++ b/restaurant/restaurant.html
@@ -16,9 +16,63 @@
     <button type="button" id="buttonBack">충북대 후문</button>
     <button type="button" id="buttonWest">충북대 서문</button>
 
+    <script type = "module">
+      </script>
     <script type="text/javascript">
+      
+      function restInfo(name, locationX, locationY, topic, url){
+            this.name = name;
+            this.locationX = locationX;
+            this.locationY = locationY;
+            this.topic = topic;
+            this.url = url;
+        }
+
+        function MiddleGate(){
+            let middleRest = new Array();
+            middleRest.push(new restInfo("Brito in", 36.6325830447289, 127.45881261542357  ,"brito", "u1.com"));
+            middleRest.push(new restInfo("Nepal Restaurant", 36.63362117198181, 127.46014695376111, "nepal", "u2.com"));
+            return middleRest;
+        }
+
+        function FrontGate(){
+            let frontRest = new Array();
+            frontRest.push(new restInfo("E gane", 36.63205011468775, 127.45168960100418, "zean", "u3.com"));
+            frontRest.push(new restInfo("Arisan", 36.63343123074221, 127.44982898804105, "chinese", "u4.com"));
+            return frontRest;
+        }
+
+        function BackGate(){
+            let backRest = new Array();
+            backRest.push(new restInfo("GalBi", 36.620944114376236, 127.4517052149377, "Galbi","u5.com"));
+            backRest.push(new restInfo("Normal Guksu", 36.62621415673392, 127.45208376815307, "noodle","u6.com"));
+            return backRest;
+        }
+
+        function WestGate(){
+            let westRest = new Array();
+            westRest.push(new restInfo("Korean News", 36.62614817511974, 127.46911145708717, "alchol", "u7.com"));
+            westRest.push(new restInfo("Gambare Gambaro", 36.63042361561481, 127.4622490587106, "Japanese", "u8.com"));
+            return westRest;
+        }
+
+        function AllGate(){
+            const everyInfo = new Array();
+            const middleRest = MiddleGate();
+            const frontRest = FrontGate();
+            const backRest = BackGate();
+            const westRest = WestGate();
+            everyInfo.push(middleRest);
+            everyInfo.push(frontRest);
+            everyInfo.push(backRest);
+            everyInfo.push(westRest);
+            return everyInfo;
+        }
 
       function myMap(){
+
+        const everyRestInfo = AllGate();
+
         var mapCanvas = document.getElementById("map");
         var myCenter = new google.maps.LatLng(36.62903526993053, 127.45630791115278);
         var mapOptions = {
@@ -26,7 +80,6 @@
             zoom:15
         };
         map = new google.maps.Map(mapCanvas, mapOptions);
-
 
 
         var t1 = document.getElementById("buttonMiddle");
@@ -51,27 +104,31 @@
           map.setCenter(new google.maps.LatLng(36.62667852694975, 127.45175753126644));
           });
 
-          var marker = new google.maps.Marker({
-            map: map,
-            position: new google.maps.LatLng(36.633619808613375, 127.46043918416818)
-          });
 
-        google.maps.event.addListener(marker, 'click', function(event){
-          document.write(`
-          <div class="container">
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-            <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-            <div>
-            Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
-            </div>
-           </div>
-          </div>
-          </div>`);
-        });
+        for(let i =0; i< 4; i++) 
+          for(let j =0; j<2; j++){
+          const marker = new google.maps.Marker({
+            map: map,
+            position: new google.maps.LatLng(everyRestInfo[i][j].locationX, everyRestInfo[i][j].locationY)
+          });
+        }
+
+        // google.maps.event.addListener(marker, 'click', function(event){
+        //   document.write(`
+        //   <div class="container">
+        //     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        //     <div class="offcanvas-header">
+        //     <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+        //     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        //     </div>
+        //     <div class="offcanvas-body">
+        //     <div>
+        //     Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+        //     </div>
+        //    </div>
+        //   </div>
+        //   </div>`);
+        // });
         }
 
     </script>
